--- a/index.html
+++ b/index.html
@@ -141,12 +141,14 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-page-1 {
             display: inherit;
         }
     </style>
-    <!-- Silex HEAD tag do not remove --><button class="button button1">10px</button>
+    <!-- Silex HEAD tag do not remove -->
     <!-- End of Silex HEAD tag do not remove -->
 </head>
 
@@ -257,6 +259,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
