--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
             top: 100px;
             left: NaNpx;
             background-color: rgba(0, 0, 0, 1);
+            min-width: 1030px;
         }
         
         .silex-id-1478366444112-0 {
             min-height: 100px;
             background-color: transparent;
+            top: 15px;
+            left: 100px;
+            width: 1030px;
         }
         
         .silex-id-1507607980468-6 {
