--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         }
         
         .silex-id-1507608326448-7 {
-            width: 1157px;
+            width: 1226px;
             background-color: rgb(255, 255, 255);
-            min-height: 77px;
-            top: -4px;
-            left: 3px;
+            min-height: 80px;
+            top: -10px;
+            left: -132px;
         }
         
         .silex-id-1507608402831-8 {
@@ -125,7 +125,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"139px","left":"5px"},"silex-id-1474394621032-2":{"min-height":"602px","background-color":"transparent"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"rgba(0,0,0,1)"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1507607389292-0":{"width":"216px","min-height":"105px","top":"0px","left":"109px"},"silex-id-1507607980468-6":{"width":"93px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"13px","left":"897px"},"silex-id-1507608326448-7":{"width":"1157px","background-color":"rgb(255, 255, 255)","min-height":"77px","top":"-4px","left":"3px"},"silex-id-1507608402831-8":{"width":"108px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"4px","left":"680px"},"silex-id-1507608403506-9":{"width":"120px","background-color":"rgb(255, 255, 255)","min-height":"72px","top":"4px","left":"552px"},"silex-id-1507608924521-10":{"width":"773px","background-color":"rgba(255,255,255,1)","min-height":"442px","top":"59px","left":"1px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"139px","left":"5px"},"silex-id-1474394621032-2":{"min-height":"602px","background-color":"transparent"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","top":"15px","left":"100px","width":"1030px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"rgba(0,0,0,1)","min-width":"1030px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1507607389292-0":{"width":"216px","min-height":"105px","top":"0px","left":"109px"},"silex-id-1507607980468-6":{"width":"93px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"13px","left":"897px"},"silex-id-1507608326448-7":{"width":"1194px","background-color":"rgb(255, 255, 255)","min-height":"79px","top":"-10px","left":"-100px"},"silex-id-1507608402831-8":{"width":"108px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"4px","left":"680px"},"silex-id-1507608403506-9":{"width":"120px","background-color":"rgb(255, 255, 255)","min-height":"72px","top":"4px","left":"552px"},"silex-id-1507608924521-10":{"width":"773px","background-color":"rgba(255,255,255,1)","min-height":"442px","top":"59px","left":"1px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -209,49 +209,50 @@
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element" data-silex-id="silex-id-1474394621033-3" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1474394621032-2">
             <div style="" data-silex-id="silex-id-1507608924521-10" class="editable-style silex-id-1507608924521-10 container-element page-page-1 paged-element" data-silex-type="container"></div>
-        </div>
-        <div style="" data-silex-id="silex-id-1507608326448-7" class="editable-style silex-id-1507608326448-7 container-element page-page-1 paged-element" data-silex-type="container">
-            <div style="" data-silex-id="silex-id-1507608402831-8" class="editable-style html-element silex-id-1507608402831-8" data-silex-type="html">
-                <div class="silex-element-content">
-                    <style>
-                        .button {
-                            background-color: #4CAF50;
-                            /* Green */
-                            border: none;
-                            color: white;
-                            padding: 15px 32px;
-                            text-align: center;
-                            text-decoration: none;
-                            display: inline-block;
-                            font-size: 16px;
-                        }
-                    </style>
+            <div style="" data-silex-id="silex-id-1507608326448-7" class="editable-style silex-id-1507608326448-7 container-element page-page-1 paged-element" data-silex-type="container">
+                <div style="" data-silex-id="silex-id-1507608402831-8" class="editable-style html-element silex-id-1507608402831-8" data-silex-type="html">
+                    <div class="silex-element-content">
+                        <style>
+                            .button {
+                                background-color: #4CAF50;
+                                /* Green */
+                                border: none;
+                                color: white;
+                                padding: 15px 32px;
+                                text-align: center;
+                                text-decoration: none;
+                                display: inline-block;
+                                font-size: 16px;
+                            }
+                        </style>
 
 
-                    <a href="https://www.soundcloud.com" class="button">Music Here!!</a>
+                        <a href="https://www.soundcloud.com" class="button">Music Here!!</a>
+                    </div>
+                </div>
+                <div style="" data-silex-id="silex-id-1507608403506-9" class="editable-style html-element silex-id-1507608403506-9" data-silex-type="html">
+                    <div class="silex-element-content">
+                        <style>
+                            .button {
+                                background-color: #4CAF50;
+                                /* Green */
+                                border: none;
+                                color: white;
+                                padding: 15px 32px;
+                                text-align: center;
+                                text-decoration: none;
+                                display: inline-block;
+                                font-size: 16px;
+                            }
+                        </style>
+
+
+                        <a href="https://www.ifunny.com" class="button">Memes Here!!</a>
+                    </div>
                 </div>
             </div>
-            <div style="" data-silex-id="silex-id-1507608403506-9" class="editable-style html-element silex-id-1507608403506-9" data-silex-type="html">
-                <div class="silex-element-content">
-                    <style>
-                        .button {
-                            background-color: #4CAF50;
-                            /* Green */
-                            border: none;
-                            color: white;
-                            padding: 15px 32px;
-                            text-align: center;
-                            text-decoration: none;
-                            display: inline-block;
-                            font-size: 16px;
-                        }
-                    </style>
-
-
-                    <a href="https://www.ifunny.com" class="button">Memes Here!!</a>
-                </div>
-            </div>
         </div>
+
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366450713-3 section-element" data-silex-id="silex-id-1478366450713-3" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366450713-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366450713-2">
