--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
         }
         
         .silex-id-1507859624042-0 {
-            width: 764px;
+            width: 947px;
             background-color: rgb(255, 255, 255);
-            min-height: 366px;
+            min-height: 395px;
             top: 244px;
             left: 936px;
         }
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"139px","left":"5px"},"silex-id-1474394621032-2":{"min-height":"602px","background-color":"transparent"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","top":"15px","left":"100px","width":"1030px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"rgba(0,0,0,1)","min-width":"1030px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1507607389292-0":{"width":"216px","min-height":"105px","top":"0px","left":"109px"},"silex-id-1507607980468-6":{"width":"93px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"13px","left":"897px"},"silex-id-1507608326448-7":{"width":"1226px","background-color":"rgb(255, 255, 255)","min-height":"80px","top":"8px","left":"-130px"},"silex-id-1507608402831-8":{"width":"108px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"4px","left":"680px"},"silex-id-1507608403506-9":{"width":"120px","background-color":"rgb(255, 255, 255)","min-height":"72px","top":"4px","left":"552px"},"silex-id-1507608924521-10":{"width":"773px","background-color":"rgba(255,255,255,1)","min-height":"442px","top":"59px","left":"1px"},"silex-id-1507859624042-0":{"width":"764px","background-color":"rgb(255, 255, 255)","min-height":"366px","top":"38px","left":"-128px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"139px","left":"5px"},"silex-id-1474394621032-2":{"min-height":"602px","background-color":"transparent"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","top":"15px","left":"100px","width":"1030px"},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"rgba(0,0,0,1)","min-width":"1030px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1507607389292-0":{"width":"216px","min-height":"105px","top":"0px","left":"109px"},"silex-id-1507607980468-6":{"width":"93px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"13px","left":"897px"},"silex-id-1507608326448-7":{"width":"1226px","background-color":"rgb(255, 255, 255)","min-height":"80px","top":"8px","left":"-130px"},"silex-id-1507608402831-8":{"width":"108px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"4px","left":"680px"},"silex-id-1507608403506-9":{"width":"120px","background-color":"rgb(255, 255, 255)","min-height":"72px","top":"4px","left":"552px"},"silex-id-1507608924521-10":{"width":"773px","background-color":"rgba(255,255,255,1)","min-height":"442px","top":"59px","left":"1px"},"silex-id-1507859624042-0":{"width":"947px","background-color":"rgb(255, 255, 255)","min-height":"395px","top":"244px","left":"936px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -351,6 +351,10 @@
                 ::-webkit-scrollbar-thumb {
                     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
                     background-color: #555;
+                }
+                
+                p {
+                    size: large;
                 }
             </style>
             <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
