--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
             left: 109px;
         }
         
+        .silex-id-1509000565842-5 {
+            width: 115px;
+            background-color: rgb(255, 255, 255);
+            min-height: 52px;
+            top: 16px;
+            left: 891px;
+        }
+        
         .silex-id-1478366450713-3 {
             top: 130px;
             left: 5px;
@@ -108,7 +116,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"602px","background-color":"transparent"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"90px","background-color":"transparent","top":"15px","left":"100px","width":"1030px"},"silex-id-1478366444112-1":{"top":"5px","left":"5px","background-color":"rgba(0,0,0,1)","min-width":"1030px"},"silex-id-1478366450713-2":{"min-height":"68px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"130px","left":"5px","background-color":"rgba(0,0,0,1)"},"silex-id-1507607389292-0":{"width":"216px","min-height":"105px","top":"0px","left":"109px"},"silex-id-1507607980468-6":{"width":"93px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"13px","left":"897px"},"silex-id-1507608326448-7":{"width":"1226px","background-color":"rgb(255, 255, 255)","min-height":"80px","top":"8px","left":"-130px"},"silex-id-1507608402831-8":{"width":"108px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"4px","left":"680px"},"silex-id-1507608403506-9":{"width":"120px","background-color":"rgb(255, 255, 255)","min-height":"72px","top":"4px","left":"552px"},"silex-id-1507866102934-5":{"width":"879px","background-color":"rgb(255, 255, 255)","min-height":"415px","top":"273px","left":"1237px"},"silex-id-1508999694434-1":{"width":"115px","background-color":"rgb(255, 255, 255)","min-height":"52px","top":"11px","left":"302px"},"silex-id-1508999927749-2":{"width":"98px","background-color":"rgb(255, 255, 255)","min-height":"52px","top":"11px","left":"427px"},"silex-id-1509000118738-4":{"width":"1242px","background-color":"rgb(255, 255, 255)","min-height":"560px","top":"240px","left":"11px"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"602px","background-color":"transparent"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366444112-0":{"min-height":"90px","background-color":"transparent","top":"15px","left":"100px","width":"1030px"},"silex-id-1478366444112-1":{"top":"5px","left":"5px","background-color":"rgba(0,0,0,1)","min-width":"1030px"},"silex-id-1478366450713-2":{"min-height":"68px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"130px","left":"5px","background-color":"rgba(0,0,0,1)"},"silex-id-1507607389292-0":{"width":"216px","min-height":"105px","top":"0px","left":"109px"},"silex-id-1507607980468-6":{"width":"93px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"13px","left":"897px"},"silex-id-1507608326448-7":{"width":"1226px","background-color":"rgb(255, 255, 255)","min-height":"80px","top":"8px","left":"-130px"},"silex-id-1507608402831-8":{"width":"108px","background-color":"rgb(255, 255, 255)","min-height":"69px","top":"4px","left":"680px"},"silex-id-1507608403506-9":{"width":"120px","background-color":"rgb(255, 255, 255)","min-height":"72px","top":"4px","left":"552px"},"silex-id-1507866102934-5":{"width":"879px","background-color":"rgb(255, 255, 255)","min-height":"415px","top":"273px","left":"1237px"},"silex-id-1508999694434-1":{"width":"115px","background-color":"rgb(255, 255, 255)","min-height":"52px","top":"11px","left":"302px"},"silex-id-1508999927749-2":{"width":"98px","background-color":"rgb(255, 255, 255)","min-height":"52px","top":"11px","left":"427px"},"silex-id-1509000118738-4":{"width":"1239px","background-color":"rgb(255, 255, 255)","min-height":"560px","top":"242px","left":"8px"},"silex-id-1509000565842-5":{"width":"115px","background-color":"rgb(255, 255, 255)","min-height":"52px","top":"16px","left":"891px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -140,8 +148,9 @@
             display: inherit;
         }
     </style>
-    <script src="/static/2.7/unslider/unslider-min.js" data-silex-static="" data-dependency=""></script>
-    <link rel="stylesheet" href="/static/2.7/unslider/unslider.css" data-silex-static="" data-dependency="">
+    <script src="//editor.silex.me/static/2.7/unslider/unslider-min.js" data-silex-static="" data-dependency=""></script>
+    <link rel="stylesheet" href="//editor.silex.me/static/2.7/unslider/unslider.css" data-silex-static="" data-dependency="">
+
     <!-- Silex HEAD tag do not remove -->
     <!-- End of Silex HEAD tag do not remove -->
 </head>
@@ -191,6 +200,26 @@
                         <font face="courier new,monospace" size="7">
                             <font color="#ffffff">EMO-Hub</font>
                         </font><br></h3>
+                </div>
+            </div>
+            <div data-silex-type="html" class="editable-style html-element null silex-id-1509000565842-5 paged-element" data-silex-id="silex-id-1509000565842-5" style="">
+                <div class="silex-element-content">
+                    <style>
+                        .button {
+                            background-color: #4CAF50;
+                            /* Green */
+                            border: none;
+                            color: white;
+                            padding: 15px 32px;
+                            text-align: center;
+                            text-decoration: none;
+                            display: inline-block;
+                            font-size: 16px;
+                        }
+                    </style>
+
+
+                    <a href="https://google.com" class="button">Log Out</a>
                 </div>
             </div>
         </div>
@@ -567,17 +596,17 @@
 
             <div class="slideshow-container">
 
-                <div class="mySlides fade">
+                <div class="mySlides fade" style="display: block;">
                     <div class="numbertext">1 / 3</div>
-                    <img src="http://generated.inspirobot.me/071/aXm5542xjU.jpg" style="width:100%">
+                    <img src="//generated.inspirobot.me/071/aXm5542xjU.jpg" style="width:100%">
                 </div>
 
-                <div class="mySlides fade">
+                <div class="mySlides fade" style="display: none;">
                     <div class="numbertext">2 / 3</div>
                     <img src="http://generated.inspirobot.me/070/aXm8321xjU.jpg" style="width:100%">
                 </div>
 
-                <div class="mySlides fade">
+                <div class="mySlides fade" style="display: none;">
                     <div class="numbertext">3 / 3</div>
                     <img src="http://generated.inspirobot.me/073/aXm6873xjU.jpg" style="width:100%">
                 </div>
@@ -589,7 +618,7 @@
             <br>
 
             <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot active" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
@@ -624,6 +653,8 @@
             </script>
         </div>
     </div>
+
+
 </body>
 
 </html>
